changing of file name

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Resolutions</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css-styles/styles.css">
 </head>
 <body>
+
     <header class="header">
         <div class="ban-head">
         <h1 class="hh-one">Again, the opportunity has come to start off with our best</h1>
@@ -17,7 +18,9 @@
             </div>
              
     </header>
+
     <main>
+
     <section>
         <div class="sec-one">
             <div class="sec-img"><img src="images/person.png" alt="">
@@ -34,6 +37,7 @@
             </div>
         </div>
     </section>
+
     <section style="padding: 50px 10px;">
         <h1 style="text-align: center; margin-bottom: 50px; font-size: 30px;">My plan in this year 2023</h1>
         <div class="sec-two">
@@ -93,6 +97,7 @@
             </tr>
         </table>
     </section>
+    
      <footer class="footer">
         <div>
             <h1>Future</h1>
